fix style on mobile

--- a/src/app/less/media-custom.less
+++ b/src/app/less/media-custom.less
@@ -1,4 +1,11 @@
-
+@media (min-width: 768px) {
+	.pull-right-custom{
+		float: right;
+	}
+	.features-text i{
+		margin-top: 40px;
+	}
+}
 @media (max-width: 768px) {
 	body{
 		text-align: justify;
@@ -18,5 +25,27 @@
 	  /*color: #fff;*/
 	  color: #676a6c;
 	  border-top: 6px solid #2A3F5D;
+	}
+	.block-top-mobile{
+		padding-top: 30px;
+	}
+	.project-custom-mobile.project{
+		width: 100%;
+	}
+	.row-mobile-only.row{
+		margin-left: 0;
+		margin-right: 0;
+	}
+	.workflow-chart.workflow-chart-mobile{
+		width: 100%;
+	}
+	.features-text.features-text-mobile h2{
+		margin-top: 15px;
+	}
+	.features-text.features-text-mobile p{
+		text-align: justify;
+	}
+	.testimonials-text.testimonials-text-mobile{
+		text-align: justify;	
 	}
 }
